--- a/old_version/views_file/new.pug
+++ b/old_version/views_file/new.pug
@@ -3,10 +3,13 @@ html
     head
         meta(charset='utf-8')
     body
-        form(action='/topic' method='post')
-            p
-                input(type='text' name='title' placehorder='title')
-            p
-                textarea(name='description')
-            p
-                input(type='submit')
+        include header.pug
+        
+        article
+            form(action='/topic' method='post')
+                p
+                    input(type='text' name='title' placehorder='title')
+                p
+                    textarea(name='description')
+                p
+                    input(type='submit')
