--- a/old_version/views_file/view.pug
+++ b/old_version/views_file/view.pug
@@ -3,8 +3,10 @@ html
     head
         meta(charset='utf-8')
     body
-        h1 Server Side JavaScript
-        ul
-            each topic in topics
-                li
-                    a(href=`topic/${topic}`)=topic
+        include header.pug
+
+        article
+            h2=title
+            =description
+        div
+            a(href='/topic/new') new
