구 버전 - MySQL 글 추가기능

--- a/old_version/views_mysql/view.pug
+++ b/old_version/views_mysql/view.pug
@@ -21,4 +21,4 @@ html
                 h2 Welcome
                 | This is topic homepage
         div
-            a(href='/topic/new') new
+            a(href='/topic/add') add
